Finalização/Criação funcionalidades, documentações
